--- a/src/scss/Global.scss
+++ b/src/scss/Global.scss
@@ -40,3 +40,22 @@ body.darkmod {
     padding: 0 20px;
     position: relative;
 }
+
+.is-img-loading {
+    opacity: 0;
+}
+
+.is-img-loaded {
+    animation: fadeIn .3s ease;
+    opacity: 1;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
