--- a/src/styles/03__elements/_card.scss
+++ b/src/styles/03__elements/_card.scss
@@ -1,6 +1,17 @@
+.card__list{
+    overflow: hidden;
+    display: flex;
+    flex-wrap: wrap;
+    // @media only screen and (max-width: 987px) {
+    //     grid-template-columns: 1fr 1fr;
+    // }
+    // @media only screen and (max-width: 600px) {
+    //     grid-template-columns: 1fr;
+    // }
+}
 
 .card {
-    --col:3;
+    --col: 3;
     width: calc(100% / var(--col) - 20px);
     margin: 10px;
     position: relative;
@@ -10,15 +21,19 @@
     padding: 10px;
     border-radius: 20px;
     height: 400px;
-    &:hover .card__btn{
+
+    &:hover .card__btn {
         bottom: 10px;
     }
+
     &:hover .card__image {
         height: 55%;
     }
-    &__content{
+
+    &__content {
         padding: 10px;
     }
+
     &__heart {
         position: absolute;
         z-index: 99;
@@ -44,11 +59,13 @@
         border-radius: 10px;
         overflow: hidden;
         transition: .3s;
-        a{
+
+        a {
             display: block;
             height: 100%;
             width: 100%;
         }
+
         img {
             width: 100%;
             height: 100%;
@@ -82,7 +99,11 @@
 
     &__outher {
         color: var(--gray);
-        font-size: 1.4rem;
+        font-size: 1.3rem;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+
         a {
             color: #1e50ff;
 
@@ -144,11 +165,13 @@
 @include media(789px) {
     .card {
         width: calc(50% - 20px);
-        &__btn{
+
+        &__btn {
             display: none;
         }
+
         &:hover .card__image {
-           height: 65%;
+            height: 65%;
         }
     }
 
@@ -157,13 +180,15 @@
 @include media(600px) {
     .card {
         width: 100%;
-        &__btn{
+
+        &__btn {
             display: none;
         }
+
         &:hover .card__image {
-           height: 65%;
+            height: 65%;
         }
     }
-    
-    
+
+
 }
