--- a/src/styles/05__utils/_utils.scss
+++ b/src/styles/05__utils/_utils.scss
@@ -6,297 +6,384 @@
     padding: 0 $m-size;
     position: relative;
 }
-.background{
+
+.background {
     position: relative;
     // overflow: hidden;
     width: 100%;
     max-height: max-content;
 }
+
+.ellip {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
 // color
-.text-white{
+.text-white {
     color: $white;
 }
-.text-acc{
+
+.text-acc {
     color: #707a8a
 }
-.text-gray{
+
+.text-gray {
     color: gray;
 }
-.text{
+
+.text {
     color: var(--text-color) !important;
 }
-.text-yellow{
+
+.text-yellow {
     color: $yellow;
 }
+
 // test
-.text-center{
+.text-center {
     text-align: center;
 }
+
 // margin
-.m-auto{
+.m-auto {
     margin: auto !important;
 }
-.mx-auto{
+
+.mx-auto {
     margin: 0 auto !important;
 }
-.mx-0{
+
+.mx-0 {
     margin: auto 0 auto 0 auto;
 }
-.m-0{
+
+.m-0 {
     margin: 0;
 }
-.ms-0{
+
+.ms-0 {
     margin-left: 0;
 }
-.me-0{
+
+.me-0 {
     margin-right: 0;
 }
-.me-1{
+
+.me-1 {
     margin-right: $xs-size;
 }
-.me-2{
+
+.me-2 {
     margin-right: $s-size;
 }
-.me-3{
+
+.me-3 {
     margin-right: $m-size;
 }
-.me-4{
+
+.me-4 {
     margin-right: $xl-size;
 }
-.me-5{
+
+.me-5 {
     margin-right: $xxl-size;
 }
-.ms-1{
+
+.ms-1 {
     margin-left: $xs-size;
 }
-.ms-2{
+
+.ms-2 {
     margin-left: $s-size;
 }
-.ms-3{
+
+.ms-3 {
     margin-left: $m-size;
 }
-.ms-4{
+
+.ms-4 {
     margin-left: $xl-size;
 }
-.ms-5{
+
+.ms-5 {
     margin-left: $xxl-size;
 }
-.m-1{
-    margin:$xs-size;
+
+.m-1 {
+    margin: $xs-size;
 }
-.m-2{
+
+.m-2 {
     margin: $s-size;
 }
-.m-3{
+
+.m-3 {
     margin: $m-size;
 }
-.m-4{
+
+.m-4 {
     margin: $l-size;
 }
-.m-5{
+
+.m-5 {
     margin: $xl-size;
 }
 
-.mt-0{
+.mt-0 {
     margin-top: 0;
 }
-.mt-1{
+
+.mt-1 {
     margin-top: $xs-size;
 }
-.mt-2{
+
+.mt-2 {
     margin-top: $s-size;
 }
-.mt-3{
+
+.mt-3 {
     margin-top: $m-size;
 }
-.mt-4{
+
+.mt-4 {
     margin-top: $xl-size
 }
-.mt-5{
+
+.mt-5 {
     margin-top: $xxl-size
 }
-.mb-1{
+
+.mb-1 {
     margin-bottom: $xs-size;
 }
-.mb-2{
+
+.mb-2 {
     margin-bottom: $s-size;
 }
-.mb-3{
+
+.mb-3 {
     margin-bottom: $m-size;
 }
-.mb-4{
+
+.mb-4 {
     margin-bottom: $xl-size;
 }
-.mb-5{
+
+.mb-5 {
     margin-bottom: $xxl-size;
 }
+
 // padding
-.p-auto{
+.p-auto {
     padding: auto !important;
 }
-.px-0{
+
+.px-0 {
     padding: auto 0 auto 0 auto;
 }
-.px-auto{
+
+.px-auto {
     padding: 0 auto !important;
 }
-.p-0{
+
+.p-0 {
     padding: 0 !important;
 }
-.ps-0{
+
+.ps-0 {
     padding-left: 0;
 }
-.pe-0{
+
+.pe-0 {
     padding-right: 0;
 }
-.p-1{
-    padding:$xs-size;
+
+.p-1 {
+    padding: $xs-size;
 }
-.p-2{
+
+.p-2 {
     padding: $s-size;
 }
-.p-3{
+
+.p-3 {
     padding: $m-size;
 }
-.p-4{
+
+.p-4 {
     padding: $l-size;
 }
-.p-5{
+
+.p-5 {
     padding: $xl-size;
 }
-.py-1{
-    padding:$xs-size 0;
+
+.py-1 {
+    padding: $xs-size 0;
 }
-.py-2{
+
+.py-2 {
     padding: $s-size 0;
 }
-.py-3{
+
+.py-3 {
     padding: $m-size 0;
 }
-.py-4{
+
+.py-4 {
     padding: $l-size 0;
 }
-.py-5{
+
+.py-5 {
     padding: $xl-size 0;
 }
 
 // flexbox
-.d-flex{
+.d-flex {
     display: flex !important;
 
-} 
-.d-inline{
+}
+
+.d-inline {
     display: inline;
 }
-.d-center{
+
+.d-center {
     display: flex !important;
     justify-content: center;
     align-items: center;
 }
-.d-none{
+
+.d-none {
     display: none;
 }
-.d-block{
+
+.d-block {
     display: block;
 }
-.d-between{
+
+.d-between {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-.shirk{
+
+.shirk {
     flex-shrink: 0;
 }
-.gap-y-1{
+
+.gap-y-1 {
     column-gap: $m-size;
 }
-.gap-y-2{
+
+.gap-y-2 {
     column-gap: $l-size;
 }
-.gap-y-3{
-    column-gap:$xl-size;
-}
-.gap-y-4{
-    column-gap:$xxl-size;
+
+.gap-y-3 {
+    column-gap: $xl-size;
 }
 
-.relative{
+.gap-y-4 {
+    column-gap: $xxl-size;
+}
+
+.relative {
     position: relative;
 }
-.absolute{
+
+.absolute {
     position: absolute;
 }
 
-.col-5{
+.col-5 {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
 }
-.col-4{
+
+.col-4 {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
 }
-.col-3{
+
+.col-3 {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
 }
-.col-2{
+
+.col-2 {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 }
-.col-1{
+
+.col-1 {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
 }
-@include media("1024px"){
-    .col-md-1{
+
+@include media("1024px") {
+    .col-md-1 {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
     }
-    .col-md-2{
+
+    .col-md-2 {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
     }
-    .col-md-3{
+
+    .col-md-3 {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
     }
-    .col-md-4{
+
+    .col-md-4 {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
     }
 }
-@include media("768px"){
-    .col-sm-1{
+
+@include media("768px") {
+    .col-sm-1 {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
     }
-    .col-sm-2{
+
+    .col-sm-2 {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
     }
-    .col-sm-3{
+
+    .col-sm-3 {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
     }
-    .col-sm-4{
+
+    .col-sm-4 {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
     }
 }
-@include media("500px"){
-    .col-xs-1{
+
+@include media("500px") {
+    .col-xs-1 {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
     }
-    .col-xs-2{
+
+    .col-xs-2 {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
     }
-    .col-xs-3{
+
+    .col-xs-3 {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
     }
-    .col-xs-4{
+
+    .col-xs-4 {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
     }
